<resources>
    <string name="app_name">SOS Button</string>
    <string name="welcome_alert">WELCOME</string>
    <string name="select_language">Select Language</string>
    <string name="text_data">Insert your Personal Data</string>
    <string name="text_sos_alert">SOS ALERT</string>
    <string name="text_click_button">CLICK THE BUTTON TO SEND HELP</string>
    <string name="first_names">First Names</string>
    <string name="last_names">Last Names</string>
    <string name="edit_comments">Comments (alergies, type of blood...)</string>
    <string name="phone_number">Emergency Phone Number</string>
    <string name="next_btn">NEXT</string>
    <string name="next_btn1">NEXT</string>
    <string name="nav_sos_button">SOS Button</string>
    <string name="profile_nav">Profile</string>
    <string name="language_nav">Language</string>
    <string name="share_nav">Share on Facebook</string>
    <string name="permission_alert_dialog_title">SMS Permission</string>
    <string name="permission_dialog_message">SOSAlert Message will now request to send SMS from your device.</string>
    <string name="action_ok">OK</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>

    <string-array name="languages_array">
        <item>Language</item>
        <item>Portuguese</item>
        <item>English</item>
    </string-array>

    <string name="tv_insert_your">INSERT YOUR</string>
    <string name="tv_personal_data">INSERT YOUR PERSONAL DATA</string>
    <string name="portuguese">Portuguese</string>
    <string name="english">English</string>
    <string name="valid_fname">Please Enter a valid first name</string>
    <string name="valid_lname">Please Enter a valid last name</string>
    <string name="valid_description">Please Enter a valid Description</string>
    <string name="valid_phonenumber">Please enter a valid Phone Number</string>
    <string name="gps_disabled">GPS module is disabled.\nWould you like to enable it?</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="grant_permissions">Please Grant Permissions to use GPS and send Messages</string>
    <string name="enable_btn">ENABLE</string>
    <string name="sending_message_txt">Sending Message</string>
    <string name="tv_where_are_you">Where are You? (Testing)</string>
    <string name="facebook_app_id">1928720124106842</string>
    <string name="facebook_login_protocol_scheme">fb1928720124106842</string>

    <string-array name="countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>British Virgin</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon </item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba </item>
        <item>Curacao</item>
        <item>Cyprus </item>
        <item>Czech Republic</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark </item>
        <item>Djibouti </item>
        <item>Dominica </item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt </item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea </item>
        <item>Estonia </item>
        <item>Ethiopia </item>
        <item>Falkland Islands </item>
        <item>Faroe Islands </item>
        <item>Fiji </item>
        <item>Finland </item>
        <item>France</item>
        <item>French Polynesia</item>
        <item>Gabon </item>
        <item>Gambia</item>
        <item>Georgia </item>
        <item>Germany </item>
        <item>Ghana </item>
        <item>Gibraltar</item>
        <item>Greece </item>
        <item>Greenland</item>
        <item>Grenada </item>
        <item>Guam </item>
        <item>Guatemala</item>
        <item>Guernsey </item>
        <item>Guinea </item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti </item>
        <item>Honduras </item>
        <item>Hong Kong </item>
        <item>Hungary </item>
        <item>Iceland </item>
        <item>India </item>
        <item>Indonesia </item>
        <item>Iran </item>
        <item>Iraq </item>
        <item>Ireland </item>
        <item>Isle of Man </item>
        <item>Israel</item>
        <item>Italy </item>
        <item>Ivory Coast</item>
        <item>Jamaica </item>
        <item>Japan </item>
        <item>Jersey </item>
        <item>Jordan </item>
        <item>Kazakhstan</item>
        <item>Kenya </item>
        <item>Kiribati</item>
        <item>Kosovo</item>
        <item>Kuwait </item>
        <item>Kyrgyzstan</item>
        <item>Laos </item>
        <item>Latvia</item>
        <item>Lebanon </item>
        <item>Lesotho </item>
        <item>Liberia </item>
        <item>Libya </item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau </item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives </item>
        <item>Mali </item>
        <item>Malta </item>
        <item>Marshall Islands </item>
        <item>Mauritania</item>
        <item>Mauritius </item>
        <item>Mayotte </item>
        <item>Mexico </item>
        <item>Micronesia</item>
        <item>Moldova </item>
        <item>Monaco </item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco </item>
        <item>Mozambique</item>
        <item>Myanmar </item>
        <item>Namibia </item>
        <item>Nauru </item>
        <item>Nepal </item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia </item>
        <item>New Zealand </item>
        <item>Nicaragua </item>
        <item>Niger </item>
        <item>Nigeria</item>
        <item>Niue </item>
        <item>North Korea</item>
        <item>Northern Mariana Islands</item>
        <item>Norway </item>
        <item>Oman </item>
        <item>Pakistan</item>
        <item>Palau </item>
        <item>Palestine</item>
        <item>Panama </item>
        <item>Papua New Guinea</item>
        <item>Paraguay </item>
        <item>Peru </item>
        <item>Philippines </item>
        <item>Pitcairn </item>
        <item>Poland </item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar </item>
        <item>Republic of the Congo</item>
        <item>Reunion </item>
        <item>Romania </item>
        <item>Russia</item>
        <item>Rwanda </item>
        <item>Saint Barthelemy</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Martin</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa </item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia </item>
        <item>Senegal </item>
        <item>Serbia </item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Sint Maarten</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia </item>
        <item>South Africa</item>
        <item>South Korea </item>
        <item>South Sudan </item>
        <item>Spain </item>
        <item>Sri Lanka</item>
        <item>Sudan </item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen </item>
        <item>Swaziland </item>
        <item>Sweden </item>
        <item>Switzerland</item>
        <item>Syria </item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania </item>
        <item>Thailand </item>
        <item>Togo </item>
        <item>Tokelau </item>
        <item>Tonga </item>
        <item>Trinidad and Tobago </item>
        <item>Tunisia </item>
        <item>Turkey </item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu </item>
        <item>U.S. Virgin Islands</item>
        <item>Uganda </item>
        <item>Ukraine </item>
        <item>United Arab Emirates</item>
        <item>United Kingdom </item>
        <item>United States </item>
        <item>Uruguay </item>
        <item>Uzbekistan </item>
        <item>Vanuatu </item>
        <item>Vatican </item>
        <item>Venezuela </item>
        <item>Vietnam </item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen </item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>

</resources>
