<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_menu"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="none">
        <item
              android:id="@+id/nav_sos"
              android:title="@string/nav_sos_button"
              android:icon="@drawable/ic_sos_btn"/>

        <item android:id="@+id/nav_profile"
              android:title="@string/profile_nav"
              android:icon="@drawable/ic_settings"/>


        <item android:id="@+id/nav_share"
              android:title="@string/share_nav"
              android:icon="@drawable/ic_facebook"/>

        <item android:id="@+id/nav_info"
              android:title="@string/info_nav"/>

        <!--<item
            android:id="@+id/nav_language"
            android:title="@string/language_nav"
            android:icon="@drawable/ic_world"
            />-->
    </group>

    <item android:id="@+id/language"
          android:title="@string/language_nav"
          android:icon="@drawable/ic_world">
        <menu>
            <item android:id="@+id/language_pt"
                android:title="@string/portuguese"
                android:icon="@drawable/ic_pt_flag"/>
            <item android:id="@+id/language_en"
                android:title="@string/english"
                android:icon="@drawable/ic_en_flag"/>
        </menu>
    </item>

</menu>